- Поправил часть кода для базовой поддержки responses API - Поправил работу функций во время стриминга - Поправил pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = ["Konstantin Krestnikov <rai220@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+include = ["gpt2giga_models.json"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
