--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ asyncio = "^3.4.3"
 python-dotenv = "^1.0.1"
 aiohttp = "^3.10.10"
 tiktoken = "^0.9.0"
+pillow = "^11.1.0"
 
 
 [tool.poetry.scripts]
