--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-   GIGACHAT_USER=
-   GIGACHAT_PASSWORD=
-   GIGACHAT_BASE_URL=
-   GIGACHAT_MODEL=GigaChat-2-Max
-   GIGACHAT_VERIFY_SSL_CERTS=False
+#Proxy settings
+GPT2GIGA_HOST=0.0.0.0
+GPT2GIGA_PORT=8000
+GPT2GIGA_USE_HTTPS=False
+GPT2GIGA_LOG_LEVEL=DEBUG
+
+GIGACHAT_SCOPE=GIGACHAT_API_PERS
+GIGACHAT_CREDENTIALS=""
+GIGACHAT_PROFANITY_CHECK=False
+GIGACHAT_MODEL=GigaChat-2-Max
+GIGACHAT_VERIFY_SSL_CERTS=False
+GIGACHAT_TIMEOUT=70000
