--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,14 @@
 services:
   gpt2giga:
+    image: gigateam/gpt2giga:python3.10
     build:
       context: .
       dockerfile: Dockerfile
+      args: 
+      - PYTHON_VERSION=3.10
     container_name: gpt2giga
     ports:
-      - "8090:8090"
+      - "${GPT2GIGA_PORT:-8090}:${GPT2GIGA_PORT:-8090}"
     restart: unless-stopped
     env_file:
       - .env
