add flag for insecure connections

--- a/.env.defaults
+++ b/.env.defaults
@@ -40,5 +40,6 @@ GPT2GIGA_AUTH_TOKEN_URL=             # Token endpoint URL
 GPT2GIGA_AUTH_BASIC_B64=             # base64(CLIENT_ID:CLIENT_SECRET)
 GPT2GIGA_AUTH_GRANT_TYPE=client_credentials # Grant type (empty to omit)
 GPT2GIGA_AUTH_SCOPE=                 # Optional scope
+GPT2GIGA_AUTH_INSECURE=False         # Disable TLS verification for token fetch
 
 
