add embedding limits

--- a/.env.defaults
+++ b/.env.defaults
@@ -42,4 +42,7 @@ GPT2GIGA_AUTH_GRANT_TYPE=client_credentials # Grant type (empty to omit)
 GPT2GIGA_AUTH_SCOPE=                 # Optional scope
 GPT2GIGA_AUTH_INSECURE=False         # Disable TLS verification for token fetch
 
+# Embeddings limits config (array format JSON)
+GPT2GIGA_EMBEDDINGS_CONFIG_FILE=     # Override path; default gpt2giga/config/embeddings.json
+
 
