add controls for embeddings delay

--- a/.env.defaults
+++ b/.env.defaults
@@ -16,6 +16,10 @@ GPT2GIGA_TIMEOUT=600                  # Proxy request timeout (sec)
 # Streaming coalescing (disabled by default → passthrough)
 GPT2GIGA_STREAM_COALESCE_BYTES=0      # 0 disables byte-based coalescing
 GPT2GIGA_STREAM_COALESCE_MS=0         # 0 disables time-based coalescing
+GPT2GIGA_STREAM_ADAPTIVE=True         # Adaptive chunk sizing for streaming
+GPT2GIGA_STREAM_TARGET_CHUNK_MS=100   # Target time between chunks
+GPT2GIGA_STREAM_MIN_BYTES=256         # Min adaptive chunk size
+GPT2GIGA_STREAM_MAX_BYTES=8192        # Max adaptive chunk size
 
 # Backend (GigaChat-compatible)
 GIGACHAT_BASE_URL=https://gigachat.devices.sberbank.ru/api/v1 # Default upstream
@@ -45,4 +49,14 @@ GPT2GIGA_AUTH_INSECURE=False         # Disable TLS verification for token fetch
 # Embeddings limits config (array format JSON)
 GPT2GIGA_EMBEDDINGS_CONFIG_FILE=     # Override path; default gpt2giga/config/embeddings.json
 
+
+# Embeddings adaptive retry/backoff
+GPT2GIGA_EMBEDDINGS_MAX_RETRIES=3
+GPT2GIGA_EMBEDDINGS_BACKOFF_BASE_MS=200
+GPT2GIGA_EMBEDDINGS_BACKOFF_MAX_MS=5000
+GPT2GIGA_EMBEDDINGS_RATE_MIN_MS=0
+GPT2GIGA_EMBEDDINGS_RATE_MAX_MS=1000
+GPT2GIGA_EMBEDDINGS_RATE_BACKOFF_FACTOR=2
+GPT2GIGA_EMBEDDINGS_RATE_SUCCESS_WINDOW=10
+GPT2GIGA_EMBEDDINGS_RATE_DROP_TO_AVG_AFTER=10
 
