add adaptive timeout

--- a/.env.defaults
+++ b/.env.defaults
@@ -60,4 +60,8 @@ GPT2GIGA_EMBEDDINGS_RATE_BACKOFF_FACTOR=2
 GPT2GIGA_EMBEDDINGS_RATE_SUCCESS_WINDOW=10
 GPT2GIGA_EMBEDDINGS_RATE_DROP_TO_AVG_AFTER=10
 GPT2GIGA_EMBEDDINGS_RATE_MEDIAN_SAMPLES=21
+GPT2GIGA_EMBEDDINGS_TIMEOUT_FACTOR=2
+GPT2GIGA_EMBEDDINGS_TIMEOUT_MIN_MS=1000
+GPT2GIGA_EMBEDDINGS_TIMEOUT_MAX_MS=60000
+GPT2GIGA_EMBEDDINGS_TIMEOUT_MAX_RETRIES=0
 
