--- a/.env.defaults
+++ b/.env.defaults
@@ -64,4 +64,5 @@ GPT2GIGA_EMBEDDINGS_TIMEOUT_FACTOR=2
 GPT2GIGA_EMBEDDINGS_TIMEOUT_MIN_MS=1000
 GPT2GIGA_EMBEDDINGS_TIMEOUT_MAX_MS=60000
 GPT2GIGA_EMBEDDINGS_TIMEOUT_MAX_RETRIES=0
+GPT2GIGA_CLOSE_SOCKET_ON_TIMEOUT=false
 
