--- a/.env.defaults
+++ b/.env.defaults
@@ -65,4 +65,12 @@ GPT2GIGA_EMBEDDINGS_TIMEOUT_MIN_MS=1000
 GPT2GIGA_EMBEDDINGS_TIMEOUT_MAX_MS=60000
 GPT2GIGA_EMBEDDINGS_TIMEOUT_MAX_RETRIES=0
 GPT2GIGA_CLOSE_SOCKET_ON_TIMEOUT=false
+GPT2GIGA_TIMEOUT_CLOSE_THRESHOLD=2
+
+# Upstream HTTP connection pooling
+GPT2GIGA_HTTP2=true
+GPT2GIGA_POOL_MAX_CONNECTIONS=100
+GPT2GIGA_POOL_MAX_KEEPALIVE=20
+GPT2GIGA_POOL_KEEPALIVE_TIMEOUT_MS=60000
+GPT2GIGA_POOL_KEEPALIVE_EXPIRY_MS=5000
 
