--- a/.env.defaults
+++ b/.env.defaults
@@ -67,6 +67,17 @@ GPT2GIGA_EMBEDDINGS_TIMEOUT_MAX_RETRIES=0
 GPT2GIGA_CLOSE_SOCKET_ON_TIMEOUT=false
 GPT2GIGA_TIMEOUT_CLOSE_THRESHOLD=2
 
+# Embeddings request queue (enabled by default)
+GPT2GIGA_EMB_QUEUE_ENABLED=true
+GPT2GIGA_EMB_QUEUE_SIZE=100
+GPT2GIGA_EMB_WORKERS=2
+GPT2GIGA_EMB_RATE_RPS=0
+
+# Idle monitoring and pool management
+IDLE_WARN_MS=30000             # Log idle warnings after this many ms
+IDLE_CHECK_MS=5000            # How often to check for idle state
+IDLE_CLOSE_POOL_MS=60000      # Close and restart pool after idle timeout
+
 # Upstream HTTP connection pooling
 GPT2GIGA_HTTP2=true
 GPT2GIGA_POOL_MAX_CONNECTIONS=100
