--- a/.env.defaults
+++ b/.env.defaults
@@ -78,10 +78,16 @@ IDLE_WARN_MS=30000             # Log idle warnings after this many ms
 IDLE_CHECK_MS=5000            # How often to check for idle state
 IDLE_CLOSE_POOL_MS=60000      # Close and restart pool after idle timeout
 
-# Upstream HTTP connection pooling
-GPT2GIGA_HTTP2=true
+# Upstream HTTP connection pooling (shared defaults)
+GPT2GIGA_HTTP2=false
 GPT2GIGA_POOL_MAX_CONNECTIONS=100
 GPT2GIGA_POOL_MAX_KEEPALIVE=20
 GPT2GIGA_POOL_KEEPALIVE_TIMEOUT_MS=60000
 GPT2GIGA_POOL_KEEPALIVE_EXPIRY_MS=5000
+
+# Endpoint-specific connection pooling (separate TCP connections per endpoint)
+GPT2GIGA_POOL_CHAT_MAX_CONNECTIONS=100    # Override for /chat/completions endpoint
+GPT2GIGA_POOL_CHAT_MAX_KEEPALIVE=20       # Override for /chat/completions endpoint
+GPT2GIGA_POOL_EMB_MAX_CONNECTIONS=10      # Override for /embeddings endpoint (smaller pool)
+GPT2GIGA_POOL_EMB_MAX_KEEPALIVE=5        # Override for /embeddings endpoint (smaller keepalive)
 
