--- a/.env.defaults
+++ b/.env.defaults
@@ -49,6 +49,9 @@ GPT2GIGA_AUTH_INSECURE=False         # Disable TLS verification for token fetch
 # Embeddings limits config (array format JSON)
 GPT2GIGA_EMBEDDINGS_CONFIG_FILE=     # Override path; default gpt2giga/config/embeddings.json
 
+# Completions token limits config (array format JSON)
+GPT2GIGA_COMPLETIONS_CONFIG_FILE=    # Override path; default gpt2giga/config/completions.json
+
 
 # Embeddings adaptive retry/backoff
 GPT2GIGA_EMBEDDINGS_MAX_RETRIES=3
@@ -90,4 +93,16 @@ GPT2GIGA_POOL_CHAT_MAX_CONNECTIONS=100    # Override for /chat/completions endpo
 GPT2GIGA_POOL_CHAT_MAX_KEEPALIVE=20       # Override for /chat/completions endpoint
 GPT2GIGA_POOL_EMB_MAX_CONNECTIONS=10      # Override for /embeddings endpoint (smaller pool)
 GPT2GIGA_POOL_EMB_MAX_KEEPALIVE=5        # Override for /embeddings endpoint (smaller keepalive)
+
+# Codebase Indexer Configuration
+GPT2GIGA_INDEXER_GPT2GIGA_URL=http://localhost:8090  # gpt2giga API URL
+GPT2GIGA_INDEXER_COLLECTION_NAME=                     # Vector DB collection (default: codebase)
+GPT2GIGA_INDEXER_BATCH_SIZE=100                       # Batch size for embeddings
+GPT2GIGA_INDEXER_CHUNK_SIZE=1000                       # Target tokens per chunk
+GPT2GIGA_INDEXER_INCLUDE_PATTERNS=.py,.js,.ts,.java,.go,.rs,.cpp,.cc,.cxx,.c,.h,.hpp,.hxx,.sql  # File extensions to include (C++, SQL, and common languages)
+GPT2GIGA_INDEXER_EXCLUDE_PATTERNS=node_modules,venv,.venv,.git,__pycache__,*.pyc  # Patterns to exclude
+GPT2GIGA_INDEXER_INCREMENTAL=true                     # Only index changed files (default: true)
+GPT2GIGA_INDEXER_VECTOR_DB_TYPE=simple                # Vector DB type: simple, qdrant
+GPT2GIGA_INDEXER_VECTOR_DB_URL=                       # Vector DB URL (e.g., http://localhost:6333 for Qdrant)
+GPT2GIGA_INDEXER_VECTOR_DB_API_KEY=                  # Vector DB API key (optional)
 
