--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 asyncio = "^3.4.3"
 python-dotenv = "^1.0.1"
 aiohttp = "^3.10.10"
+httpx = "^0.27.0"
 tiktoken = "^0.9.0"
 pillow = "^11.1.0"
 uvicorn = "^0.37.0"
@@ -20,7 +21,7 @@ aioitertools = "^0.12.0"
 gigachat = "^0.1.42.post2"
 
 [tool.poetry.scripts]
-gpt2giga = "gpt2giga:run"
+gpt2giga = "gpt2giga:main"
 
 [build-system]
 requires = ["poetry-core"]
