--- a/.env.defaults
+++ b/.env.defaults
@@ -94,6 +94,15 @@ GPT2GIGA_POOL_CHAT_MAX_KEEPALIVE=20       # Override for /chat/completions endpo
 GPT2GIGA_POOL_EMB_MAX_CONNECTIONS=10      # Override for /embeddings endpoint (smaller pool)
 GPT2GIGA_POOL_EMB_MAX_KEEPALIVE=5        # Override for /embeddings endpoint (smaller keepalive)
 
+# RAG (Retrieval-Augmented Generation) Configuration
+GPT2GIGA_RAG_ENABLED=false                            # Enable RAG for chat completions (default: false)
+GPT2GIGA_RAG_COLLECTION_NAME=                         # Vector DB collection name for RAG (default: from indexer or 'codebase')
+GPT2GIGA_RAG_VECTOR_DB_TYPE=simple                    # Vector DB type: simple, qdrant (default: simple)
+GPT2GIGA_RAG_VECTOR_DB_URL=                           # Vector DB URL (e.g., http://localhost:6333 for Qdrant)
+GPT2GIGA_RAG_VECTOR_DB_API_KEY=                       # Vector DB API key (optional)
+GPT2GIGA_RAG_TOP_K=5                                  # Number of top chunks to retrieve (default: 5)
+GPT2GIGA_RAG_MIN_SIMILARITY=0.7                       # Minimum similarity threshold for retrieval (default: 0.7)
+
 # Codebase Indexer Configuration
 GPT2GIGA_INDEXER_GPT2GIGA_URL=http://localhost:8090  # gpt2giga API URL
 GPT2GIGA_INDEXER_COLLECTION_NAME=                     # Vector DB collection (default: codebase)
