--- a/.env.defaults
+++ b/.env.defaults
@@ -13,13 +13,13 @@ GPT2GIGA_EMBEDDINGS=EmbeddingsGigaR   # Embeddings model used on /embeddings
 GPT2GIGA_ENABLE_IMAGES=True           # Enable images by default
 GPT2GIGA_TIMEOUT=600                  # Proxy request timeout (sec)
 
-# Streaming coalescing (disabled by default → passthrough)
-GPT2GIGA_STREAM_COALESCE_BYTES=0      # 0 disables byte-based coalescing
-GPT2GIGA_STREAM_COALESCE_MS=0         # 0 disables time-based coalescing
+# Streaming coalescing (enabled by default for larger chunks)
+GPT2GIGA_STREAM_COALESCE_BYTES=2048   # Coalesce when buffer >= 2048 bytes (increased from 0)
+GPT2GIGA_STREAM_COALESCE_MS=100       # Coalesce after 100ms of inactivity (increased from 0)
 GPT2GIGA_STREAM_ADAPTIVE=True         # Adaptive chunk sizing for streaming
 GPT2GIGA_STREAM_TARGET_CHUNK_MS=100   # Target time between chunks
-GPT2GIGA_STREAM_MIN_BYTES=256         # Min adaptive chunk size
-GPT2GIGA_STREAM_MAX_BYTES=8192        # Max adaptive chunk size
+GPT2GIGA_STREAM_MIN_BYTES=1024       # Min adaptive chunk size (increased from 256)
+GPT2GIGA_STREAM_MAX_BYTES=16384       # Max adaptive chunk size (increased from 8192)
 
 # Backend (GigaChat-compatible)
 GIGACHAT_BASE_URL=https://gigachat.devices.sberbank.ru/api/v1 # Default upstream
