--- a/.env.defaults
+++ b/.env.defaults
@@ -106,7 +106,7 @@ GPT2GIGA_RAG_MIN_SIMILARITY=0.7                       # Minimum similarity thres
 # Codebase Indexer Configuration
 GPT2GIGA_INDEXER_GPT2GIGA_URL=http://localhost:8090  # gpt2giga API URL
 GPT2GIGA_INDEXER_COLLECTION_NAME=                     # Vector DB collection (default: codebase)
-GPT2GIGA_INDEXER_BATCH_SIZE=100                       # Batch size for embeddings
+GPT2GIGA_INDEXER_BATCH_SIZE=10                        # Batch size for embeddings (reduced from 100 to avoid 413 errors)
 GPT2GIGA_INDEXER_CHUNK_SIZE=2000                       # Target tokens per chunk (increased from 1000 for better context)
 GPT2GIGA_INDEXER_INCLUDE_PATTERNS=.py,.js,.ts,.java,.go,.rs,.cpp,.cc,.cxx,.c,.h,.hpp,.hxx,.sql  # File extensions to include (C++, SQL, and common languages)
 GPT2GIGA_INDEXER_EXCLUDE_PATTERNS=node_modules,venv,.venv,.git,__pycache__,*.pyc  # Patterns to exclude
